--- a/Dashboard/requirements.txt
+++ b/Dashboard/requirements.txt
@@ -1,462 +1,13 @@
-altair==5.5.0
-attrs==25.3.0
-blinker==1.9.0
-blis==1.3.0
-blosc2==3.3.1
-bokeh==3.6.3
-Bottleneck==1.4.2
-bqplot==0.12.44
-branca==0.8.1
-CacheControl==0.14.2
-cachetools==5.5.2
-catalogue==2.0.10
-certifi==2025.1.31
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.1
-chex==0.1.89
-clarabel==0.10.0
-click==8.1.8
-cloudpathlib==0.21.0
-cloudpickle==3.1.1
-cmake==3.31.6
-cmdstanpy==1.2.5
-colorcet==3.1.0
-colorlover==0.3.0
-colour==0.1.5
-community==1.0.0b1
-confection==0.1.5
-cons==0.4.6
-contourpy==1.3.2
-cramjam==2.10.0
-cryptography==43.0.3
-cufflinks==0.17.3
-cvxopt==1.3.2
-cvxpy==1.6.5
-cycler==0.12.1
-cyipopt==1.5.0
-cymem==2.0.11
-Cython==3.0.12
-dask==2024.12.1
-dask-expr==1.1.21
-datascience==0.17.6
-db-dtypes==1.4.2
-dbus-python==1.2.18
-debugpy==1.8.0
-decorator==4.4.2
-defusedxml==0.7.1
-Deprecated==1.2.18
-diffusers==0.32.2
-distributed-ucxx-cu12==0.42.0
-distro==1.9.0
-dlib==19.24.6
-dm-tree==0.1.9
-docker-pycreds==0.4.0
-docstring_parser==0.16
-docutils==0.21.2
-dopamine_rl==4.1.2
-duckdb==1.2.2
-earthengine-api==1.5.12
-easydict==1.13
-editdistance==0.8.1
-eerepr==0.1.1
-einops==0.8.1
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-entrypoints==0.4
-et_xmlfile==2.0.0
-etils==1.12.2
-etuples==0.3.9
-Farama-Notifications==0.0.4
-fastai==2.7.19
-fastcore==1.7.29
-fastdownload==0.0.7
-fastjsonschema==2.21.1
-fastprogress==1.0.3
-fastrlock==0.8.3
-filelock==3.18.0
-firebase-admin==6.7.0
-Flask==3.1.0
-flatbuffers==25.2.10
-flax==0.10.5
-folium==0.19.5
-fonttools==4.57.0
-frozendict==2.4.6
-frozenlist==1.6.0
-fsspec==2025.3.2
-future==1.0.0
-gast==0.6.0
-gcsfs==2025.3.2
-GDAL==3.6.4
-gdown==5.2.0
-geemap==0.35.3
-geocoder==1.38.1
-geographiclib==2.0
-geopandas==1.0.1
-geopy==2.4.1
-gin-config==0.5.0
-gitdb==4.0.12
-GitPython==3.1.44
-glob2==0.7
-google==2.0.3
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.2
-google-api-python-client==2.164.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-google-cloud-aiplatform==1.89.0
-google-cloud-bigquery==3.31.0
-google-cloud-bigquery-connection==1.18.2
-google-cloud-bigquery-storage==2.30.0
-google-cloud-bigtable==2.30.1
-google-cloud-core==2.4.3
-google-cloud-dataproc==5.18.1
-google-cloud-datastore==2.21.0
-google-cloud-firestore==2.20.2
-google-cloud-functions==1.20.3
-google-cloud-iam==2.19.0
-google-cloud-language==2.17.1
-google-cloud-pubsub==2.29.0
-google-cloud-resource-manager==1.14.2
-google-cloud-spanner==3.53.0
-google-cloud-storage==2.19.0
-google-cloud-translate==3.20.2
-google-crc32c==1.7.1
-google-genai==1.11.0
-google-generativeai==0.8.5
-google-pasta==0.2.0
-google-resumable-media==2.7.2
-google-spark-connect==0.5.2
-googleapis-common-protos==1.70.0
-googledrivedownloader==1.1.0
-graphviz==0.20.3
-greenlet==3.2.1
-grpc-google-iam-v1==0.14.2
-grpc-interceptor==0.15.4
-grpcio==1.71.0
-grpcio-status==1.71.0
-grpclib==0.4.7
-gspread==6.2.0
-gspread-dataframe==4.0.0
-gym==0.25.2
-gym-notices==0.0.8
-gymnasium==1.1.1
-h11==0.14.0
-h2==4.2.0
-h5netcdf==1.6.1
-h5py==3.13.0
-hdbscan==0.8.40
-highspy==1.9.0
-holidays==0.71
-holoviews==1.20.2
-hpack==4.1.0
-html5lib==1.1
-httpcore==1.0.8
-httpimport==1.4.1
-httplib2==0.22.0
-httpx==0.28.1
-huggingface-hub==0.30.2
-humanize==4.12.2
-hyperframe==6.1.0
-hyperopt==0.2.7
-ibis-framework==9.5.0
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-imagesize==1.4.1
-imbalanced-learn==0.13.0
-immutabledict==4.2.1
-importlib_metadata==8.6.1
-importlib_resources==6.5.2
-imutils==0.5.4
-inflect==7.5.0
-iniconfig==2.1.0
-intel-cmplr-lib-ur==2025.1.0
-intel-openmp==2025.1.0
-ipyevents==2.0.2
-ipyfilechooser==0.6.0
-ipykernel==6.17.1
-ipyleaflet==0.19.2
-ipyparallel==8.8.0
-ipython==7.34.0
-ipython-genutils==0.2.0
-ipython-sql==0.5.0
-ipytree==0.2.2
-ipywidgets==7.7.1
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jax==0.5.2
-jaxlib==0.5.1
-jeepney==0.9.0
-jieba==0.42.1
-Jinja2==3.1.6
-jiter==0.9.0
-joblib==1.4.2
-jsonpatch==1.33
-jsonpickle==4.0.5
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-client==6.1.12
-jupyter-console==6.1.0
-jupyter-leaflet==0.19.2
-jupyter-server==1.16.0
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-jupyterlab_widgets==3.0.14
-kaggle==1.7.4.2
-kagglehub==0.3.11
-keras==3.8.0
-keras-hub==0.18.1
-keras-nlp==0.18.1
-keyring==25.6.0
-keyrings.google-artifactregistry-auth==1.1.2
-kiwisolver==1.4.8
-langchain==0.3.24
-langchain-core==0.3.55
-langchain-text-splitters==0.3.8
-langcodes==3.5.0
-langsmith==0.3.33
-language_data==1.3.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy_loader==0.4
-librosa==0.11.0
-lightgbm==4.5.0
-linkify-it-py==2.0.3
-llvmlite==0.43.0
-locket==1.0.0
-logical-unification==0.4.6
-lxml==5.3.2
-Mako==1.1.3
-marisa-trie==1.2.1
-Markdown==3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-matplotlib-venn==1.1.2
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-miniKanren==1.0.3
-missingno==0.5.2
-mistune==3.1.3
-mizani==0.13.3
-mkl==2025.0.1
-ml-dtypes==0.4.1
-mlxtend==0.23.4
-more-itertools==10.6.0
-moviepy==1.0.3
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.4.3
-multipledispatch==1.0.0
-multitasking==0.0.11
-murmurhash==1.0.12
-music21==9.3.0
-namex==0.0.9
-narwhals==1.35.0
-natsort==8.4.0
-nbclassic==1.2.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-ndindex==1.9.2
-nest-asyncio==1.6.0
-networkx==3.4.2
-nibabel==5.3.2
-notebook==6.5.7
-notebook_shim==0.2.4
-numba==0.60.0
-numexpr==2.10.2
 numpy==2.0.2
-oauth2client==4.1.3
-oauthlib==3.2.2
-openai==1.75.0
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
-openpyxl==3.1.5
-opentelemetry-api==1.32.1
-opentelemetry-sdk==1.32.1
-opentelemetry-semantic-conventions==0.53b1
-opt_einsum==3.4.0
-optax==0.2.4
-optree==0.15.0
-orbax-checkpoint==0.11.12
-orjson==3.10.16
-osqp==1.0.3
-packaging==23.2
 pandas==2.2.2
-pandas-datareader==0.10.0
-pandas-gbq==0.28.0
-pandas-stubs==2.2.2.240909
-pandocfilters==1.5.1
-panel==1.6.2
-param==2.2.0
-parso==0.8.4
-parsy==2.1
-partd==1.4.2
-pathlib==1.0.1
-pickleshare==0.7.5
-pillow==11.1.0
-platformdirs==4.3.7
-plotly==5.24.1
-plotnine==0.14.5
-pluggy==1.5.0
-ply==3.11
-polars==1.21.0
-pooch==1.8.2
-portpicker==1.5.2
-prompt_toolkit==3.0.51
-propcache==0.3.1
-prophet==1.1.6
-proto-plus==1.26.1
-protobuf==5.29.4
-psutil==5.9.5
-psycopg2==2.9.10
-ptyprocess==0.7.0
-py-cpuinfo==9.0.0
-py4j==0.10.9.7
-pyarrow==18.1.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycairo==1.28.0
-pycocotools==2.0.8
-pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
-pydata-google-auth==1.9.1
-pydot==3.0.4
-pydotplus==2.0.2
-PyDrive==1.3.1
-PyDrive2==1.21.3
-pyerfa==2.0.1.5
-pygame==2.6.1
-pygit2==1.17.0
-Pygments==2.18.0
-PyGObject==3.42.0
-PyJWT==2.10.1
-pylibcugraph-cu12==25.2.0
-pylibraft-cu12==25.2.0
-pymc==5.21.2
-pymystem3==0.2.0
-pynndescent==0.5.13
-pynvjitlink-cu12==0.5.2
-pynvml==12.0.0
-pyogrio==0.10.0
-Pyomo==6.8.2
-PyOpenGL==3.1.9
-pyOpenSSL==24.2.1
-pyparsing==3.2.3
-pyperclip==1.9.0
-pyproj==3.7.1
-pyshp==2.3.1
-PySocks==1.7.1
-pyspark==3.5.5
-pytensor==2.30.3
-pytest==8.3.5
-python-apt==0.0.0
-python-box==7.3.2
-python-dateutil==2.8.2
-python-louvain==0.16
-python-slugify==8.0.4
-python-snappy==0.7.3
-python-utils==3.9.1
-regex==2024.11.6
-requirements-parser==0.9.0
-safetensors==0.5.3
-scikit-image==0.25.2
 scikit-learn==1.6.1
-scipy==1.14.1
-scooby==0.10.0
-scs==3.2.7.post2
-seaborn==0.13.2
-SecretStorage==3.3.3
-Send2Trash==1.8.3
-sentence-transformers==3.4.1
-sentencepiece==0.2.0
-sentry-sdk==2.26.1
-setproctitle==1.3.5
-shap==0.47.2
-shapely==2.1.0
-shellingham==1.5.4
-simple-parsing==0.1.7
-simplejson==3.20.1
-simsimd==6.2.1
-six==1.17.0
-sklearn-compat==0.1.3
-sklearn-pandas==2.2.0
-slicer==0.0.8
-smart-open==7.1.0
-smmap==5.0.2
-sniffio==1.3.1
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soundfile==0.13.1
-soupsieve==2.7
-soxr==0.5.0.post1
-spacy==3.8.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-spanner-graph-notebook==1.1.6
-statsmodels==0.14.4
-stringzilla==3.12.5
-sympy==1.13.1
-tables==3.10.2
-tabulate==0.9.0
-tbb==2022.1.0
-tblib==3.1.0
-tcmlib==1.3.0
-tenacity==9.1.2
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
 tensorflow==2.18.0
-tensorflow-datasets==4.9.8
-tensorflow-hub==0.16.1
-tensorflow-io-gcs-filesystem==0.37.1
-tensorflow-metadata==1.17.1
-tensorflow-probability==0.25.0
-tensorflow-text==2.18.1
-tensorflow_decision_forests==1.11.0
-tensorflowjs==4.22.0
-tensorstore==0.1.73
-termcolor==3.0.1
-terminado==0.18.1
-text-unidecode==1.3
-textblob==0.19.0
-tf-slim==1.1.0
 tf_keras==2.18.0
-thinc==8.3.6
-threadpoolctl==3.6.0
-tifffile==2025.3.30
-timm==1.0.15
-tinycss2==1.4.0
-tokenizers==0.21.1
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4.2
+keras==3.8.0
+Pillow==11.1.0
+opencv-python==4.11.0.86
+matplotlib==3.10.0
+seaborn==0.13.2
 tqdm==4.67.1
-traitlets==5.7.1
-traittypes==0.2.1
-transformers==4.51.3
-tzdata==2025.2
-tzlocal==5.3.1
-uc-micro-py==1.0.3
-ucx-py-cu12==0.42.0
-ucxx-cu12==0.42.0
-umap-learn==0.5.7
-umf==0.10.0
-uritemplate==4.1.1
-urllib3==2.3.0
-xyzservices==2025.1.0
-yarl==1.20.0
-ydf==0.11.0
-yellowbrick==1.5
-yfinance==0.2.55
-zict==3.0.0
-zipp==3.21.0
-zstandard==0.23.0
+joblib==1.4.2
+streamlit==1.36.0
